added java and scala maven in pom